ISSUE : Navbar Text Alignment #25 Fixed

--- a/CSS/phone.css
+++ b/CSS/phone.css
@@ -5,8 +5,8 @@
 
 #navbar ul li a{
     font-size: 1rem;
-    padding: 0px 7px;
-    padding-bottom: 8px;
+    padding: 5px 7px;
+    /* padding-bottom: 8px; */
 }
 
 /* Home Section */
